--- a/styles/styles.less
+++ b/styles/styles.less
@@ -38,10 +38,18 @@ body{
 	background-color: #ededed;
 }
 
+#image_out{
+	.clearfix();
+	border:1px solid #d1d1d1;
+	box-sizing: border-box;
+}
+
 .piece{
 	position: relative;
-	width: 192px;
+	width: 20%;
 	float:left;
+	box-sizing: border-box;
+	border:1px solid #d1d1d1;
 }
 
 .piece img{
@@ -105,6 +113,14 @@ body{
   	#print_msg{
   		display: none !important;
   	}
+
+  	#image_out{
+		border:1px solid #d1d1d1 !important;
+	}
+
+	.piece{
+		border:1px solid #d1d1d1 !important;
+	}
 }
 
 
